--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlue">#84c0c5</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="yellow">#fcc31e</color>
+    <color name="shadow_yellow">#f69833</color>
 </resources>
