--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_pattern"
-    tools:context="com.loftscholl.mymoneytrackertwo.MainActivity">
-
+    android:orientation="vertical">
     <LinearLayout
-
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@color/colorWhite"
-
-        android:orientation="horizontal"
-        android:padding="@dimen/margin_left">
-
-        <EditText
-
-            android:id="@+id/name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:hint="@string/name_hint"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textSize="@dimen/textSize" />
-
-        <EditText
-            android:id="@+id/price"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="@string/price_hint"
-            android:inputType="number"
-            android:textSize="@dimen/textSize" />
-
+        android:layout_height="wrap_content">
         <TextView
-
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:enabled="false"
-            android:paddingEnd="@dimen/margin_left"
-            android:paddingStart="@dimen/margin_left"
-            android:text="Р"
-            android:textSize="@dimen/textSize" />
-
-        <TextView
-            android:id="@+id/add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:paddingEnd="@dimen/margin_left"
-            android:paddingStart="@dimen/margin_left"
-            android:text="+"
-            android:textSize="@dimen/textSize" />
-
+            android:background="@color/colorTableBackground"
+            android:padding="16dp"
+            android:text="Учет бюджета"
+            android:textColor="@color/colorWhite"
+            android:textSize="30sp" />
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorTableBackground"
+        android:textSize="40sp"
+        app:tabIndicatorColor="@color/colorIndicator"
+        app:tabSelectedTextColor="@color/colorWhite"
+        app:tabTextColor="@color/colorWhite" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
