--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorWhite">#ffffff</color>
     <color name="yellow">#fcc31e</color>
     <color name="shadow_yellow">#f69833</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorTableBackground">#95c9b8</color>
+    <color name="colorIndicator">#fcc31e</color>
 </resources>
