Remove items, check action mode, cheng items color, off refresh animation, delete icon,Hide round button

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -49,7 +49,7 @@
             android:enabled="false"
             android:paddingEnd="@dimen/margin_left"
             android:paddingStart="@dimen/margin_left"
-            android:text="Р"
+            android:text="@string/rouble"
             android:textSize="@dimen/textSize" />
 
         <TextView
