--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -9,7 +9,8 @@
     <RelativeLayout
         android:id="@+id/item_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_item">
 
 
         <TextView
@@ -18,9 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/price"
-
-            android:background="@color/yellow" />
+            android:layout_toStartOf="@id/price" />
 
         <TextView
             android:id="@+id/price"
