--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorTableBackground">#95c9b8</color>
     <color name="colorIndicator">#fcc31e</color>
+    <color name="item_selected">#995200</color>
 </resources>
