--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:background="@drawable/bg_pattern"
     android:orientation="vertical"
-    android:padding="10dp">
+
+    >
 
     <RelativeLayout
         android:id="@+id/item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_item">
-
+        android:layout_margin="10dp">
 
         <TextView
             android:id="@+id/name"
@@ -19,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/price" />
+            android:layout_toStartOf="@id/price"
+            android:background="@drawable/bg_item" />
 
         <TextView
             android:id="@+id/price"
@@ -33,7 +34,5 @@
             android:textStyle="bold"
 
             />
-
-
     </RelativeLayout>
-</FrameLayout>
+</android.support.v7.widget.CardView>
