--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_pattern"
-    android:orientation="vertical"
-
+    android:padding="@dimen/margin_small"
     >
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:id="@+id/item_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/name"
             style="@style/Text"
@@ -21,7 +20,6 @@
             android:layout_alignParentStart="true"
             android:layout_toStartOf="@id/price"
             android:background="@drawable/bg_item" />
-
         <TextView
             android:id="@+id/price"
             style="@style/Text.Item"
@@ -35,4 +33,5 @@
 
             />
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
