--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -24,10 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/colorAccent"
         android:src="@drawable/plus"
-        android:textSize="@dimen/textSize" />
+        app:useCompatPadding="true" />
 
 </FrameLayout>
