--- a/app/src/main/res/layout/balance.xml
+++ b/app/src/main/res/layout/balance.xml
@@ -8,8 +8,8 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="@dimen/margin_left"
-        android:paddingStart="@dimen/margin_left"
+        android:paddingEnd="@dimen/margin_middle"
+        android:paddingStart="@dimen/margin_middle"
         android:text="Balance"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/textSize" />
