--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin_left">16dp</dimen>
+    <dimen name="margin_middle">16dp</dimen>
     <dimen name="textSize">20dp</dimen>
     <dimen name="margin_small">4dp</dimen>
+    <dimen name="marginTopForPictureIntro">30dp</dimen>
 </resources>
