Realize diagram view, add balance method, design and logic

--- a/app/src/main/res/layout/balance.xml
+++ b/app/src/main/res/layout/balance.xml
@@ -1,16 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/colorWhite">
+
 
     <TextView
-
+        android:id="@+id/balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="@dimen/margin_middle"
-        android:paddingStart="@dimen/margin_middle"
-        android:text="Balance"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/textSize" />
-</LinearLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/margin_small"
+        android:layout_marginTop="40dp"
+        android:maxLines="1"
+        android:textColor="@color/colorPrimaryBright"
+        android:textSize="@dimen/text_xxlarge"
+        tools:text="48000 \u20bd" />
+
+    <TextView
+        android:id="@+id/balance_caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/balance"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:text="@string/your_balance"
+        android:textColor="@color/colorComment"
+        android:textSize="@dimen/text_large" />
+
+    <TextView
+        android:id="@+id/expense"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/balance_caption"
+        android:gravity="center_horizontal"
+        android:maxLines="1"
+        android:textColor="@color/colorExpense"
+        android:textSize="@dimen/text_xlarge"
+        app:layout_widthPercent="50%"
+        tools:text="15000 \u20bd" />
+
+    <TextView
+        android:id="@+id/income"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/balance_caption"
+        android:gravity="center_horizontal"
+        android:maxLines="1"
+        android:textColor="@color/colorItem"
+        android:textSize="@dimen/text_xlarge"
+        app:layout_widthPercent="50%"
+        tools:text="95000 \u20bd" />
+
+    <TextView
+        android:id="@+id/expense_caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/expense"
+        android:gravity="center_horizontal"
+        android:text="@string/expense"
+        android:textColor="@color/colorComment"
+        android:textSize="@dimen/text_medium"
+        app:layout_widthPercent="50%" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/expense"
+        android:gravity="center_horizontal"
+        android:text="@string/income"
+        android:textColor="@color/colorComment"
+        android:textSize="@dimen/text_medium"
+        app:layout_widthPercent="50%" />
+
+    <com.loftscholl.mymoneytrackertwo.DiagramView
+        android:id="@+id/diagram"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/expense_caption"
+        android:layout_margin="20dp" />
+
+</android.support.percent.PercentRelativeLayout>
