--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,11 @@
     <dimen name="textSize">20dp</dimen>
     <dimen name="margin_small">4dp</dimen>
     <dimen name="marginTopForPictureIntro">30dp</dimen>
+
+    <dimen name="text_item">20sp</dimen>
+
+    <dimen name="text_medium">16sp</dimen>
+    <dimen name="text_large">24sp</dimen>
+    <dimen name="text_xlarge">30sp</dimen>
+    <dimen name="text_xxlarge">48sp</dimen>
 </resources>
